init model transaction category / relation TYPE
