# routes/web.php
@@ -10,6 +10,7 @@ use App\Http\Controllers\OrganizationController;
 use App\Http\Controllers\RangeController;
 use App\Http\Controllers\SenderController;
 use App\Http\Controllers\StateController;
+use App\Http\Controllers\TransactionCategoryController;
 use App\Http\Controllers\TransactionPageController;
 use App\Http\Controllers\TransactionTypeController;
 use App\Http\Controllers\UserController;
@@ -45,6 +46,8 @@ Route::middleware('custom')->group(function() {
     Route::resource('api/font-group', FontGroupController::class);
 
     Route::resource('api/description', DescriptionController::class);
+
+    Route::resource('api/transaction-category', TransactionCategoryController::class);
 });
 
 Route::post('api/login', [AccountController::class, 'login']);
